--- a/app/src/main/res/drawable/round_button_background.xml
+++ b/app/src/main/res/drawable/round_button_background.xml
@@ -10,7 +10,7 @@
 		<shape android:shape="oval">
 			<stroke
 				android:width="1.13dp"
-				android:color="@color/colorPrimary"/>
+				android:color="@color/color_primary"/>
 			<padding
 				android:bottom="13dp"
 				android:left="13dp"
