--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,7 @@
 	<dimen name="waitingAssistantStandardSize">80.13dp</dimen>
 	<dimen name="waitingAssistantSmallSize">50.13dp</dimen>
 	<dimen name="imageViewAppLogoSize">200.13dp</dimen>
-	<dimen name="buttonTextSize">17.13sp</dimen>
+	<dimen name="contained_button_text_size">17.13sp</dimen>
 	<dimen name="buttonMarginStartEnd">30.13dp</dimen>
 	<dimen name="textInputLayoutCornerRadius">10.13dp</dimen>
 	<!-- Standardized Fragment paddings -->
@@ -21,7 +21,7 @@
 	<dimen name="fragmentPaddingLarge">8.13dp</dimen>
 	<dimen name="appBarPadding">16.13dp</dimen>
 	<dimen name="appBarPaddingTop">8.13dp</dimen>
-	<dimen name="buttonMarginAllSides">13dp</dimen>
-	<dimen name="buttonStandardCornerRadius">25.13dp</dimen>
-	<dimen name="buttonStandardElevation">13dp</dimen>
+	<dimen name="contained_button_margin">13dp</dimen>
+	<dimen name="contained_button_corner_radius">25.13dp</dimen>
+	<dimen name="contained_button_elevation">13dp</dimen>
 </resources>
