--- a/app/src/main/res/drawable/animated_loading_circle.xml
+++ b/app/src/main/res/drawable/animated_loading_circle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
-                 android:drawable="@drawable/circle">
+                 android:drawable="@drawable/loading_circle">
 	<target
 		android:name="rotationGroup"
 		android:animation="@animator/rotation_indefinite_linear_interpolator"/>
