--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
 		<item name="rippleColor">@color/rippleColor</item>
+		<item name="fontFamily">@font/didactgothic_regular</item>
 	</style>
 	
 	<style name="Theme.HappyApp.Launcher">
@@ -14,7 +15,7 @@
 	
 	<style name="Widget.HappyApp.Spinner" parent="Widget.AppCompat.Spinner">
 		<item name="elevation">13dp</item>
-		<item name="background">@drawable/box</item>
+		<item name="background">@drawable/main_fragment_shape</item>
 	</style>
 	
 	<style name="Widget.HappyApp.Seperator.View">
@@ -79,7 +80,7 @@
 	</style>
 	
 	<style name="Theme.HappyApp.Fragment">
-		<item name="background">@color/fragmentBackgroundColor</item>
+		<item name="background">@color/main_fragment_background_color</item>
 		<item name="elevation">4dp</item>
 	</style>
 	
@@ -89,7 +90,7 @@
 	
 	<style name="Theme.HappyApp.LinearLayoutBox">
 		<item name="android:padding">0dp</item>
-		<item name="background">@drawable/box</item>
+		<item name="background">@drawable/main_fragment_shape</item>
 		<item name="android:orientation">vertical</item>
 		<item name="android:layout_marginTop">4dp</item>
 		<item name="android:layout_marginBottom">4dp</item>
