--- a/app/src/main/res/xml/backup_descriptor.xml
+++ b/app/src/main/res/xml/backup_descriptor.xml
@@ -1,11 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <full-backup-content>
-	<!-- TODO Remove the following "exclude" elements to make them a part of the auto backup -->
-	<!-- Exclude the shared preferences file that contains the GCM registrationId -->
-	<exclude
-		domain="sharedpref"
-		path="user_firestore_id.xml"/>
-	<exclude
-		domain="sharedpref"
-		path="user_data.xml"/>
+	<!-- Exclude specific shared preferences that contain GCM registration Id -->
 </full-backup-content>
