--- a/app/src/main/res/drawable/main_fragment_shape.xml
+++ b/app/src/main/res/drawable/main_fragment_shape.xml
@@ -2,11 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 	<solid android:color="@color/main_fragment_background_color"/>
 	<corners
-		android:bottomLeftRadius="15dp"
-		android:bottomRightRadius="15dp"
-		android:topLeftRadius="15dp"
-		android:topRightRadius="15dp"/>
-	<stroke
-		android:width="1dp"
-		android:color="#000"/>
+		android:bottomLeftRadius="13dp"
+		android:bottomRightRadius=".13dp"
+		android:topLeftRadius=".13dp"
+		android:topRightRadius="13dp"/>
 </shape>
