--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,15 +3,9 @@
 	<color name="color_primary">#DB2323</color>
 	<color name="colorPrimaryDark">#991818</color>
 	<color name="colorAccent">#FF6666</color>
-	<color name="hintTextColor">@color/color_primary</color>
-	<color name="black">#000</color>
 	<color name="white">#fff</color>
 	<color name="main_fragment_background_color">@android:color/white</color>
-	<color name="silver">#C0C0C0</color>
-	<color name="gold">#FFD700</color>
-	<color name="platinum">#e5e4e2</color>
-	<color name="diamond">#cbe3f0</color>
 	<color name="rippleColor">@color/white</color>
 	<color name="rippleColorAccent">@color/colorAccent</color>
-	<color name="darkOverlay">#66000000</color>
+	<color name="black">@android:color/black</color>
 </resources>
