right click > convert to kotlin and then couple times code inspection to resolve some errors. all java files are kotlin now. revolution

--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -4,6 +4,6 @@
 	<item android:drawable="@android:color/white"/>
 	<!-- My product entry_activity_app_logo -->
 	<item
-		android:drawable="@drawable/ic_app_logo"
+		android:drawable = "@drawable/happyapp_logo_144"
 		android:gravity="center"/>
 </layer-list>
