--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -133,8 +133,8 @@
 				android:text="@string/register_account_for_happyapp"
 				android:textAlignment="center"
 				android:textAppearance="?attr/textAppearanceHeadline5"
-				app:layout_constraintBottom_toTopOf="@id/entry_activity_registration_first_name_layout"
-				app:layout_constraintTop_toBottomOf="@+id/entry_activity_registration_seperator_view"/>
+				app:layout_constraintBottom_toTopOf = "@id/entry_activity_registration_first_name_layout"
+				/>
 			
 			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/entry_activity_registration_first_name_layout"
