--- a/app/src/main/res/drawable/round_button_background.xml
+++ b/app/src/main/res/drawable/round_button_background.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="@color/rippleColorAccent">
+<ripple
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	android:color = "@color/rippleColorAccent"
+	>
 	<item>
-		<shape android:shape="oval">
-			<solid android:color="@android:color/background_light"/>
+		<shape android:shape = "oval">
+			<solid android:color = "@android:color/background_light"/>
 		</shape>
 	</item>
 	<item>
-		<shape android:shape="oval">
+		<shape android:shape = "oval">
 			<stroke
-				android:width="1.13dp"
-				android:color="@color/color_primary"/>
+				android:width = "1.13dp"
+				android:color = "@color/color_primary"
+				/>
 			<padding
-				android:bottom="13dp"
-				android:left="13dp"
-				android:right="13dp"
-				android:top="13dp"/>
+				android:bottom = "13dp"
+				android:left = "13dp"
+				android:right = "13dp"
+				android:top = "13dp"
+				/>
 		</shape>
 	</item>
 </ripple>
