--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,8 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
+<shape
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	android:shape = "rectangle"
+	>
 	<gradient
-		android:angle="135"
-		android:endColor="@color/color_primary"
-		android:startColor="@color/colorAccent"
-		android:type="linear"/>
+		android:angle = "135"
+		android:endColor = "@color/color_primary"
+		android:startColor = "@color/colorAccent"
+		android:type = "linear"
+		/>
 </shape>
