--- a/app/src/main/res/layout/content_subspagerinitadapter.xml
+++ b/app/src/main/res/layout/content_subspagerinitadapter.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	android:layout_width = "match_parent"
+	android:layout_height = "match_parent"
+	>
 	
 	<ProgressBar
-		style="@style/Widget.HappyApp.ProgressBar"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:id="@+id/init_adapter_loading_screen"
-		app:layout_constraintBottom_toBottomOf="parent"
-		android:visibility="visible"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+		android:id = "@+id/init_adapter_loading_screen"
+		style = "@style/Widget.HappyApp.ProgressBar"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:visibility = "visible"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent"
+		/>
 	
 	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:gravity="center"
-		android:id="@+id/init_adapter_retry_screen"
-		android:visibility="invisible"
-		android:orientation="vertical"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent">
+		android:id = "@+id/init_adapter_retry_screen"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:gravity = "center"
+		android:orientation = "vertical"
+		android:visibility = "invisible"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent"
+		>
 		
 		<ImageView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:contentDescription="@string/no_internet_connection"/>
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			android:contentDescription = "@string/no_internet_connection"
+			/>
 		
 		<com.google.android.material.button.MaterialButton
-			style="@style/Widget.HappyApp.OutlinedButton"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:onClick="onRetryClick"
-			android:text="@string/retry"/>
+			style = "@style/Widget.HappyApp.OutlinedButton"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			android:onClick = "onRetryClick"
+			android:text = "@string/retry"
+			/>
 	</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
