--- a/app/src/main/res/layout/fragment_email_signup.xml
+++ b/app/src/main/res/layout/fragment_email_signup.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   tools:context=".signup.EmailSignupFragment">
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
+	>
 	
-	<TextView
-		android:id="@+id/title"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:padding="13dp"
-		android:text="@string/sign_up_and_subscribe_for_happyapp"
-		android:textAlignment="center"
-		android:textAppearance="?attr/textAppearanceHeadline5"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+	<data>
 	
-	<androidx.fragment.app.FragmentContainerView
-		android:id="@+id/signup_nav_host_fragment"
-		android:name="androidx.navigation.fragment.NavHostFragment"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginHorizontal="13dp"
-		android:background="@drawable/main_fragment_shape"
-		android:elevation="8dp"
-		app:defaultNavHost="true"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:navGraph="@navigation/signup_nav_graph"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+	</data>
+	
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		tools:context = ".signup.EmailSignupFragment"
+		>
+		
+		<TextView
+			android:id = "@+id/title"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			android:padding = "13dp"
+			android:text = "@string/sign_up_and_subscribe_for_happyapp"
+			android:textAlignment = "center"
+			android:textAppearance = "?attr/textAppearanceHeadline5"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintTop_toTopOf = "parent"
+			/>
+		
+		<androidx.fragment.app.FragmentContainerView
+			android:id = "@+id/signup_nav_host_fragment"
+			android:name = "androidx.navigation.fragment.NavHostFragment"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			android:layout_marginHorizontal = "13dp"
+			android:background = "@drawable/main_fragment_shape"
+			android:elevation = "8dp"
+			app:defaultNavHost = "true"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:navGraph = "@navigation/signup_nav_graph"
+			/>
+	
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
