--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,110 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:padding="@dimen/fragmentPaddingMedium"
-                                                   tools:context=".login.LoginFragment">
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
+	>
 	
-	<ImageView
-		android:id="@+id/app_logo"
-		android:layout_width="@dimen/imageViewAppLogoSize"
-		android:layout_height="@dimen/imageViewAppLogoSize"
-		android:contentDescription="@string/happy_app_logo"
-		android:layout_marginTop="4dp"
-		android:elevation="8dp"
-		android:src = "@drawable/happyapp_logo_144"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+	<data>
 	
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/email_field_layout"
-		style="@style/Widget.HappyApp.TextInputLayout"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		app:errorEnabled="true"
-		app:layout_constraintTop_toBottomOf="@+id/app_logo">
+	</data>
+	
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		android:padding = "@dimen/fragmentPaddingMedium"
+		tools:context = ".login.LoginFragment"
+		>
 		
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/email_field"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/email"
-			android:inputType="textEmailAddress"
-			android:maxLines="1"
-			android:singleLine="true"/>
-	</com.google.android.material.textfield.TextInputLayout>
-	
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/password_field_layout"
-		style="@style/Widget.HappyApp.TextInputLayout"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		app:errorEnabled="true"
-		app:layout_constraintTop_toBottomOf="@+id/email_field_layout"
-		app:passwordToggleEnabled="true">
+		<ImageView
+			android:id = "@+id/app_logo"
+			android:layout_width = "@dimen/imageViewAppLogoSize"
+			android:layout_height = "@dimen/imageViewAppLogoSize"
+			android:layout_marginTop = "4dp"
+			android:contentDescription = "@string/happy_app_logo"
+			android:elevation = "8dp"
+			android:src = "@drawable/happyapp_logo_144"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintTop_toTopOf = "parent"
+			/>
 		
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/password_field"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/password"
-			android:imeActionId="6"
-			android:imeActionLabel="@string/common_signin_button_text"
-			android:imeOptions="actionUnspecified"
-			android:inputType="textPassword"
-			android:maxLines="1"
-			android:singleLine="true"/>
-	</com.google.android.material.textfield.TextInputLayout>
-	
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/login_button"
-		style="@style/Widget.HappyApp.ContainedButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/log_in"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/password_field_layout"/>
-
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/sign_up_using_these_colon"
-		android:textAlignment="center"
-		android:layout_marginBottom="13dp"
-		app:layout_constraintBottom_toTopOf="@+id/signup_button_container"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"/>
-	
-	<LinearLayout
-		android:id="@+id/signup_button_container"
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:layout_margin="13dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		android:gravity="center"
-		android:orientation="horizontal"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintStart_toStartOf="parent">
+		<com.google.android.material.textfield.TextInputLayout
+			android:id = "@+id/email_field_layout"
+			style = "@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			app:errorEnabled = "true"
+			app:layout_constraintTop_toBottomOf = "@+id/app_logo"
+			>
+			
+			<com.google.android.material.textfield.TextInputEditText
+				android:id = "@+id/email_field"
+				android:layout_width = "match_parent"
+				android:layout_height = "wrap_content"
+				android:hint = "@string/email"
+				android:inputType = "textEmailAddress"
+				android:maxLines = "1"
+				android:singleLine = "true"
+				/>
+		</com.google.android.material.textfield.TextInputLayout>
 		
-		<androidx.appcompat.widget.AppCompatImageButton
-			android:id="@+id/email_signup_button"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginEnd="6.5dp"
-			android:background="@drawable/round_button_background"
-			android:src="@drawable/ic_email_24dp"/>
+		<com.google.android.material.textfield.TextInputLayout
+			android:id = "@+id/password_field_layout"
+			style = "@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			app:errorEnabled = "true"
+			app:layout_constraintTop_toBottomOf = "@+id/email_field_layout"
+			app:passwordToggleEnabled = "true"
+			>
+			
+			<com.google.android.material.textfield.TextInputEditText
+				android:id = "@+id/password_field"
+				android:layout_width = "match_parent"
+				android:layout_height = "wrap_content"
+				android:hint = "@string/password"
+				android:imeActionId = "6"
+				android:imeActionLabel = "@string/common_signin_button_text"
+				android:imeOptions = "actionUnspecified"
+				android:inputType = "textPassword"
+				android:maxLines = "1"
+				android:singleLine = "true"
+				/>
+		</com.google.android.material.textfield.TextInputLayout>
 		
-		<androidx.appcompat.widget.AppCompatImageButton
-			android:id="@+id/google_signup_button"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginStart="6.5dp"
-			android:background="@drawable/round_button_background"
-			android:src="@drawable/ic_google_favicon_24dp"/>
-	</LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<com.google.android.material.button.MaterialButton
+			android:id = "@+id/login_button"
+			style = "@style/Widget.HappyApp.ContainedButton"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			android:text = "@string/log_in"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintTop_toBottomOf = "@+id/password_field_layout"
+			/>
+		
+		<TextView
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			android:layout_marginBottom = "13dp"
+			android:text = "@string/sign_up_using_these_colon"
+			android:textAlignment = "center"
+			app:layout_constraintBottom_toTopOf = "@+id/signup_button_container"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			/>
+		
+		<LinearLayout
+			android:id = "@+id/signup_button_container"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			android:layout_margin = "13dp"
+			android:gravity = "center"
+			android:orientation = "horizontal"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			>
+			
+			<androidx.appcompat.widget.AppCompatImageButton
+				android:id = "@+id/email_signup_button"
+				android:layout_width = "wrap_content"
+				android:layout_height = "wrap_content"
+				android:layout_marginEnd = "6.5dp"
+				android:background = "@drawable/round_button_background"
+				android:src = "@drawable/ic_email_24dp"
+				/>
+			
+			<androidx.appcompat.widget.AppCompatImageButton
+				android:id = "@+id/google_signup_button"
+				android:layout_width = "wrap_content"
+				android:layout_height = "wrap_content"
+				android:layout_marginStart = "6.5dp"
+				android:background = "@drawable/round_button_background"
+				android:src = "@drawable/ic_google_favicon_24dp"
+				/>
+		</LinearLayout>
+	
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
