--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -1,39 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   tools:context=".signup.UsernameFragment">
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
+	>
 	
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/username_field_layout"
-		style="@style/Widget.HappyApp.TextInputLayout"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		app:errorEnabled="true"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent">
+	<data>
+	
+	</data>
+	
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		tools:context = ".signup.UsernameFragment"
+		>
 		
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/username_field"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:hint="@string/username_with_star"
-			android:imeActionId="3"
-			android:imeOptions="actionNext"
-			android:inputType="text"/>
-	</com.google.android.material.textfield.TextInputLayout>
+		<com.google.android.material.textfield.TextInputLayout
+			android:id = "@+id/username_field_layout"
+			style = "@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			app:errorEnabled = "true"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintTop_toTopOf = "parent"
+			>
+			
+			<com.google.android.material.textfield.TextInputEditText
+				android:id = "@+id/username_field"
+				android:layout_width = "match_parent"
+				android:layout_height = "match_parent"
+				android:hint = "@string/username_with_star"
+				android:imeActionId = "3"
+				android:imeOptions = "actionNext"
+				android:inputType = "text"
+				/>
+		</com.google.android.material.textfield.TextInputLayout>
+		
+		<com.google.android.material.button.MaterialButton
+			android:id = "@+id/next_button"
+			style = "@style/Widget.HappyApp.TextButton"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			android:text = "@string/next"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintTop_toBottomOf = "@id/username_field_layout"
+			/>
 	
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/next_button"
-		style="@style/Widget.HappyApp.TextButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/next"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/username_field_layout"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
