--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,80 +1,89 @@
 <resources>
 	<!-- Base application theme. -->
-	<style name="Theme.HappyApp" parent="Theme.MaterialComponents.Light.NoActionBar">
+	<style name = "Theme.HappyApp"
+	       parent = "Theme.MaterialComponents.Light.NoActionBar">
 		<!-- Customize your theme here. -->
-		<item name="colorPrimary">@color/color_primary</item>
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name="colorAccent">@color/colorAccent</item>
-		<item name="rippleColor">@color/rippleColor</item>
-		<item name="android:fontFamily">@font/lato_regular</item>
+		<item name = "colorPrimary">@color/color_primary</item>
+		<item name = "colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name = "colorAccent">@color/colorAccent</item>
+		<item name = "rippleColor">@color/rippleColor</item>
+		<item name = "android:fontFamily">@font/lato_regular</item>
 	</style>
 	
-	<style name="Theme.HappyApp.Launcher">
-		<item name="android:windowBackground">@drawable/launch_screen</item>
+	<style name = "Theme.HappyApp.Launcher">
+		<item name = "android:windowBackground">@drawable/launch_screen</item>
 	</style>
 	
-	<style name="Widget.HappyApp.Seperator.TextView" parent="Widget.AppCompat.TextView">
-		<item name="android:textAlignment">center</item>
-		<item name="android:layout_marginTop">.13dp</item>
-		<item name="android:layout_height">wrap_content</item>
-		<item name="android:layout_width">match_parent</item>
-		<item name="android:textAppearance">?attr/textAppearanceSubtitle1</item>
+	<style name = "Widget.HappyApp.Seperator.TextView"
+	       parent = "Widget.AppCompat.TextView">
+		<item name = "android:textAlignment">center</item>
+		<item name = "android:layout_marginTop">.13dp</item>
+		<item name = "android:layout_height">wrap_content</item>
+		<item name = "android:layout_width">match_parent</item>
+		<item name = "android:textAppearance">?attr/textAppearanceSubtitle1</item>
 	</style>
 	
-	<style name="Widget.HappyApp.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+	<style name = "Widget.HappyApp.TextInputLayout"
+	       parent = "Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 		<!--<item name_with_placeholder="android:paddingBottom">6dp</item>-->
-		<item name="android:layout_margin">13dp</item>
-		<item name="boxCornerRadiusBottomEnd">.13dp</item>
-		<item name="boxCornerRadiusTopStart">.13dp</item>
-		<item name="boxCornerRadiusBottomStart">@dimen/textInputLayoutCornerRadius</item>
-		<item name="boxCornerRadiusTopEnd">@dimen/textInputLayoutCornerRadius</item>
+		<item name = "android:layout_margin">13dp</item>
+		<item name = "boxCornerRadiusBottomEnd">.13dp</item>
+		<item name = "boxCornerRadiusTopStart">.13dp</item>
+		<item name = "boxCornerRadiusBottomStart">@dimen/textInputLayoutCornerRadius</item>
+		<item name = "boxCornerRadiusTopEnd">@dimen/textInputLayoutCornerRadius</item>
 	</style>
 	
-	<style name="Widget.HappyApp.ContainedButton" parent="Widget.MaterialComponents.Button">
-		<item name="cornerRadius">@dimen/contained_button_corner_radius</item>
-		<item name="backgroundTint">@color/color_primary</item>
-		<item name="rippleColor">@android:color/white</item>
-		<item name="drawableTint">@android:color/white</item>
-		<item name="android:layout_margin">@dimen/contained_button_margin</item>
-		<item name="android:textSize">@dimen/contained_button_text_size</item>
-		<item name="android:stateListAnimator">@null</item>
-		<item name="android:elevation">@dimen/contained_button_elevation</item>
-		<item name="android:textColor">@android:color/white</item>
-		<item name="textAllCaps">false</item>
+	<style name = "Widget.HappyApp.ContainedButton"
+	       parent = "Widget.MaterialComponents.Button">
+		<item name = "cornerRadius">@dimen/contained_button_corner_radius</item>
+		<item name = "backgroundTint">@color/color_primary</item>
+		<item name = "rippleColor">@android:color/white</item>
+		<item name = "drawableTint">@android:color/white</item>
+		<item name = "android:layout_margin">@dimen/contained_button_margin</item>
+		<item name = "android:textSize">@dimen/contained_button_text_size</item>
+		<item name = "android:stateListAnimator">@null</item>
+		<item name = "android:elevation">@dimen/contained_button_elevation</item>
+		<item name = "android:textColor">@android:color/white</item>
+		<item name = "textAllCaps">false</item>
 	</style>
 	
-	<style name="Widget.HappyApp.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
-		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/rippleColorAccent</item>
-		<item name="android:layout_margin">13dp</item>
-		<item name="android:textSize">@dimen/contained_button_text_size</item>
-		<item name="android:textColor">?attr/colorOnSurface</item>
-		<item name="textAllCaps">false</item>
+	<style name = "Widget.HappyApp.TextButton"
+	       parent = "Widget.MaterialComponents.Button.TextButton">
+		<item name = "cornerRadius">25.13dp</item>
+		<item name = "rippleColor">@color/rippleColorAccent</item>
+		<item name = "android:layout_margin">13dp</item>
+		<item name = "android:textSize">@dimen/contained_button_text_size</item>
+		<item name = "android:textColor">?attr/colorOnSurface</item>
+		<item name = "textAllCaps">false</item>
 	</style>
 	
-	<style name="Widget.HappyApp.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-		<item name="cornerRadius">25.13dp</item>
-		<item name="rippleColor">@color/rippleColorAccent</item>
-		<item name="android:textSize">@dimen/contained_button_text_size</item>
-		<item name="android:layout_margin">13dp</item>
-		<item name="textAllCaps">false</item>
-		<item name="strokeWidth">1.13dp</item>
-		<item name="strokeColor">@color/color_primary</item>
-		<item name="android:textColor">?attr/colorOnSurface</item>
+	<style name = "Widget.HappyApp.OutlinedButton"
+	       parent = "Widget.MaterialComponents.Button.OutlinedButton">
+		<item name = "cornerRadius">25.13dp</item>
+		<item name = "rippleColor">@color/rippleColorAccent</item>
+		<item name = "android:textSize">@dimen/contained_button_text_size</item>
+		<item name = "android:layout_margin">13dp</item>
+		<item name = "textAllCaps">false</item>
+		<item name = "strokeWidth">1.13dp</item>
+		<item name = "strokeColor">@color/color_primary</item>
+		<item name = "android:textColor">?attr/colorOnSurface</item>
 	</style>
 	
-	<style name="Theme.HappyApp.Fragment">
-		<item name="background">@color/main_fragment_background_color</item>
-		<item name="elevation">4dp</item>
+	<style name = "Theme.HappyApp.Fragment">
+		<item name = "background">@color/main_fragment_background_color</item>
+		<item name = "elevation">4dp</item>
 	</style>
 	
-	<style name="Theme.HappyApp.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
+	<style name = "Theme.HappyApp.AppBarOverlay"
+	       parent = "ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
 	
-	<style name="Theme.HappyApp.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light"/>
+	<style name = "Theme.HappyApp.PopupOverlay"
+	       parent = "ThemeOverlay.MaterialComponents.Light"/>
 	
-	<style name="Widget.HappyApp.ProgressBar" parent="Widget.AppCompat.ProgressBar">
-		<item name="android:indeterminateTint">@color/colorAccent</item>
+	<style name = "Widget.HappyApp.ProgressBar"
+	       parent = "Widget.AppCompat.ProgressBar">
+		<item name = "android:indeterminateTint">@color/colorAccent</item>
 	</style>
 	
-	<style name="Widget"/>
+	<style name = "Widget"/>
 </resources>
